hphp/test/slow/error_handler/engine_exceptions_syntax_error.php.expectf
Fatal error: A semicolon `;` is expected here. in %s/engine_exceptions_syntax_error.php on line 3
